--- a/block-BHaaag/style.css
+++ b/block-BHaaag/style.css
@@ -1,24 +1,9 @@
 body{
-    background-color: #134363;
-    color: #fff;
-}
-.address{
-    color: #fff;
-}
-.name{
     color: white;
-    font-weight: bold;
+    background-color: #22396a;
 }
-.self-intro{
-    color: #18d618;
-    font-size: 30px;
-}
-strong{
-    font: bold;
-}
-.links{
-    color: red;
-    margin-left:15px;
+h2{
+    color: #31bb66;
 }
 a{
     color: red;
